# nifty-filter

./: .gitignore  .woodpecker.yml  CI.md  Cargo.toml  Justfile  README.md  dev.env  dev.hcl  flake.nix  nifty-bootstrap.bb  result
.claude/memory/: feedback_flake_lock.md
.github/workflows/: release.yml  rust.yml
certs/: step-ca-root.crt
ci/: build.sh  upload.sh
coverage/master/: index.html
coverage/master/coverage/home/runner/work/nifty-filter/nifty-filter/src/: format.rs.html  generate.rs.html  hcl_config.rs.html  main.rs.html  parsers.rs.html  qos.rs.html  vlan.rs.html
coverage/master/coverage/home/runner/work/nifty-filter/nifty-filter/src/parsers/: cidr_list.rs.html  forward_route.rs.html  icmp_type.rs.html  icmpv6_type.rs.html  inbound_rule.rs.html  inter_vlan_rule.rs.html  interface.rs.html  port.rs.html  qos_class.rs.html  subnet.rs.html
crates/nifty-dashboard/: .dockerignore  .gitignore  Cargo.toml  DEVELOPMENT.md  Justfile  LICENSE.txt  README.md  package-lock.json
crates/nifty-dashboard/.github/workflows/: release.yml  rust.yml
crates/nifty-dashboard/_scripts/: create-test-certs.sh  funcs.sh  merge_template_upstream.sh
crates/nifty-dashboard/api-doc-macros/: Cargo.toml
crates/nifty-dashboard/api-doc-macros/src/: lib.rs
crates/nifty-dashboard/app-macros/: Cargo.toml
crates/nifty-dashboard/app-macros/src/: lib.rs
crates/nifty-dashboard/frontend/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
crates/nifty-dashboard/frontend/src/: app.html
crates/nifty-dashboard/frontend/src/lib/: csrf.js
crates/nifty-dashboard/frontend/src/lib/components/: login_form.svelte  login_oidc.svelte
crates/nifty-dashboard/frontend/src/lib/components/ui/card/: card.svelte
crates/nifty-dashboard/frontend/src/routes/: +error.svelte  +layout.svelte
crates/nifty-dashboard/frontend/src/routes/login/: +page.svelte
crates/nifty-dashboard/frontend/src/routes/status/: +page.svelte
crates/nifty-dashboard/nifty-dashboard/: Cargo.toml  Dockerfile  Dockerfile.binary  askama.toml  build.rs
crates/nifty-dashboard/nifty-dashboard/migrations/: 0001_init.sql  0002_root_user.sql
crates/nifty-dashboard/nifty-dashboard/src/: api_docs.rs  config_watcher.rs  errors.rs  frontend.rs  logging.rs  main.rs  prelude.rs  response.rs  server.rs
crates/nifty-dashboard/nifty-dashboard/src/commands/: acme_dns_register.rs  mod.rs  serve.rs  sql.rs
crates/nifty-dashboard/nifty-dashboard/src/config/: acme.rs  auth.rs  cli.rs  database.rs  log.rs  mod.rs  network.rs  serve.rs  session.rs  tls.rs
crates/nifty-dashboard/nifty-dashboard/src/middleware/: auth.rs  csrf_protection.rs  mod.rs  mtls.rs  oidc.rs  require_role.rs  require_subnet.rs  trusted_forwarded_for.rs  trusted_header_auth.rs  user_session.rs
crates/nifty-dashboard/nifty-dashboard/src/models/: identity_provider.rs  ids.rs  mod.rs  role.rs  signup_method.rs  user.rs  user_role.rs  user_status.rs  user_with_roles.rs
crates/nifty-dashboard/nifty-dashboard/src/routes/: admin.rs  api.rs  config.rs  ddns.rs  debug.rs  dnsmasq.rs  events.rs  healthz.rs  hello.rs  login.rs  mdns.rs  mod.rs  qos.rs  services.rs  services_config.rs  status.rs  technitium.rs  updates.rs  whoami.rs
crates/nifty-dashboard/nifty-dashboard/src/tls/: cert_details.rs  dns.rs  generate.rs  http_redirect.rs  mod.rs  mtls.rs  self_signed_cache.rs
crates/nifty-dashboard/nifty-dashboard/src/util/: mod.rs  state_files.rs  tofu.rs  write_files.rs
crates/nifty-dashboard/nifty-dashboard/test_data/: ryan_user.sql
crates/nifty-service-monitor/: Cargo.toml
crates/nifty-service-monitor/src/: config.rs  ddns.rs  main.rs  technitium.rs  tofu.rs  traefik.rs
crates/sodola-switch/: Cargo.toml  README.md
crates/sodola-switch/src/: lib.rs  main.rs
examples/: .#vlan_router.hcl  dual_stack_router.env  dual_stack_router.hcl  home_router.env  home_router.hcl  home_router.sh  nixos-router.nix  vlan_router.env  vlan_router.hcl
nix/: default-nifty-filter.env  default-nifty-filter.hcl  default-router.env  filesystem.nix  iso.nix  module.nix  nifty-config.sh  nifty-install.sh  nifty-maintenance.sh  nifty-upgrade.sh  pve-image.nix  pve.nix  system.nix
nix/services/: avahi.nix  dashboard.nix  dnsmasq.nix  firewall.nix  init.nix  iperf.nix  network.nix  sodola-switch.nix  step-ca.nix
nix/services/containers/: chrony.nix  ddns.nix  default.nix  service-monitor.nix  technitium.nix  traefik.nix
sodola-switch/: Cargo.toml  README.md
sodola-switch/src/: main.rs
src/: dnsmasq.rs  format.rs  generate.rs  hcl_config.rs  info.rs  install.rs  main.rs  nftables.rs  parsers.rs  pve_setup.rs  qos.rs  systemd.rs  systemd_network.rs  tui.rs  vlan.rs
src/config/: env_file.rs  hcl_file.rs  menus.rs  mod.rs
src/info/: interfaces.rs  mod.rs  network.rs
src/parsers/: chain_policy.rs  cidr_list.rs  dhcp_lease_time.rs  dhcp_static_leases.rs  domain.rs  forward_route.rs  icmp_type.rs  icmpv6_type.rs  inbound_rule.rs  inter_vlan_rule.rs  interface.rs  mod.rs  port.rs  qos_class.rs
src/tui/: dhcp.rs  dialog.rs  dns.rs  firewall.rs  help.rs  interface.rs  mod.rs  network.rs  overlay.rs  theme.rs
templates/: dnsmasq.conf.txt  qos.sh.txt  router.nft.txt  systemd-network.link.txt  systemd-network.network.txt
