[package]
name = "nifty-filter"
version = "0.1.0"
edition = "2021"
description = "A nifty tool to configure netfilter/nftables"
license = "MIT"
repository = "https://github.com/username/nifty-filter"
readme = "README.md"
keywords = ["network", "filter", "rust"]
categories = ["network-programming", "command-line-utilities"]
authors = ["EnigmaCurry <ryan@enigmacurry.com>"]

[dependencies]
askama = "0.12.1"
clap = { version = "4.5.20", features = ["derive", "env"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
ipnetwork = "0.20.0"
log = "0.4.22"
