[package]
name = "nifty-filter"
version = "0.1.1"
edition = "2021"
description = "A nifty tool to configure netfilter/nftables"
license = "MIT"
repository = "https://github.com/EnigmaCurry/nifty-filter"
readme = "README.md"
keywords = ["network", "filter", "rust"]
categories = ["network-programming", "command-line-utilities"]
authors = ["EnigmaCurry <ryan@enigmacurry.com>"]

[dependencies]
askama = "0.12.1"
atty = "0.2.14"
clap = { version = "4.5.20", features = ["derive", "env"] }
colored_json = "5.0.0"
cursive = "0.21.1"
dotenvy = "0.15.7"
env_logger = "0.11.5"
ipnetwork = "0.20.0"
log = "0.4.22"
pnet = "0.35.0"
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
