[workspace]
members = [".", "crates/sodola-switch", "crates/nifty-service-monitor"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["EnigmaCurry <ryan@enigmacurry.com>"]

[package]
name = "nifty-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "A nifty tool to configure netfilter/nftables"
repository = "https://github.com/EnigmaCurry/nifty-filter"
readme = "README.md"
keywords = ["network", "filter", "rust"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
askama = "0.12.1"
clap = { version = "4.5.20", features = ["derive", "env"] }
env_logger = "0.11.5"
hcl-rs = "0.19"
indexmap = { version = "2", features = ["serde"] }
inquire = "0.9"
ipnetwork = "0.20.0"
libc = "0.2"
log = "0.4.22"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"

[features]
nixos = []

[dev-dependencies]
tempfile = "3.27.0"
