[package]
name = "nifty-service-monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Polling monitor that applies configuration to nifty infrastructure services"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
