[package]
name = "sodola-switch"
version = "0.1.0"
edition = "2021"
description = "Management client for Sodola SL-SWTGW218AS managed switch"
license = "MIT"
authors = ["EnigmaCurry <ryan@enigmacurry.com>"]

[dependencies]
ureq = { version = "2", default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
md-5 = "0.10"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
hcl-rs = "0.19"
libc = "0.2"
